# tts

./: .env.example  .gitignore  CMakeLists.txt  README.md
docs/: API.md  DEVELOPMENT.md
proto/: mediator_tts.proto  tts.proto
scripts/: build.sh  download_vits_piper_zh.sh  gen_jwt_keypair.sh  gen_proto.sh  install_deps.sh  install_sherpa_onnx.sh  install_sherpa_onnx_headers.py  install_sherpa_onnx_headers.sh  run.sh  smoke_test.sh  start_server.sh
src/: config.cpp  config.h  main.cpp
src/databoard/: data_board.h  metrics_snapshot.h  pending_request_store.h  session_pool.h  voice_catalog.h
src/entry/: grpc_response_writer.cpp  grpc_response_writer.h  jwt_auth_interceptor.cpp  jwt_auth_interceptor.h  mediator_tts_service_impl.h  request_parser.cpp  request_parser.h  tts_service_impl.h
src/framework/: change_set.h  clock.h  copy_channel.h  event_bus.cpp  event_bus.h  messages.h  priority_timer.h  reactor.h  task.cpp  task.h  thread_pool.h
src/heartbeat/: backpressure_controller.h  changeset_builder.h  evolution_engine.h  heartbeat.h  heartbeat_events.h  message_processor.h
src/local/: audio_resampler.cpp  audio_resampler.h  local_tts_engine.h  local_tts_factory.cpp  mock_local_tts.cpp  mock_local_tts.h  sherpa_local_tts.cpp  sherpa_local_tts.h
src/observability/: admission_gate.h  event_logger.h  metrics_collector.h
src/upstream/: hex_codec.h  lws_transport.cpp  minimax_protocol_adapter.h  upstream_client.h  ws_frame_codec.cpp  ws_frame_codec.h  ws_task_scheduler.h
tests/: CMakeLists.txt  test_audio_resampler.cpp  test_copy_channel.cpp  test_event_bus.cpp  test_evolution_single_layer.cpp  test_grpc_ping.cpp  test_grpc_synthesize.cpp  test_heartbeat_e2e.cpp  test_heartbeat_local.cpp  test_jwt_verifier.cpp  test_local_tts_mock.cpp  test_mediator_synth.cpp  test_protocol_codec.cpp  test_request_parser.cpp  test_session_pool_lru.cpp
